pi-cluster/deployments/calendars/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: calendars
  namespace: calendars
  labels:
    app: calendars
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - calendars.charlieegan3.com
    secretName: calendars-tls
  rules:
  - host: calendars.charlieegan3.com
    http:
      paths:
      - path: /
        backend:
          serviceName: calendars
          servicePort: 80
